tests/functional/lang/parse-fail-set.err.exp
error: undefined variable 'x'
       at «stdin»:1:3:
            1| 8.x
             |   ^
            2|
